// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagList > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

.emotion-8 {
  display: inherit;
}

.emotion-8[data-container-full-height="true"] {
  height: 100%;
}

.emotion-8[data-container-full-width="true"] {
  width: 100%;
}

.emotion-10 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </span>
      </div>
      <div
        aria-controls="«r2»"
        aria-describedby="«r2»"
        class="emotion-8 emotion-9"
        tabindex="-1"
      >
        <span
          class="emotion-10 emotion-11"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly a scrollable popover with non default popoverMaxHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

.emotion-20 {
  display: inherit;
}

.emotion-20[data-container-full-height="true"] {
  height: 100%;
}

.emotion-20[data-container-full-width="true"] {
  width: 100%;
}

.emotion-22 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            very
          </div>
        </span>
        <span
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            item
          </div>
        </span>
        <span
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            item
          </div>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            item
          </div>
        </span>
      </div>
      <div
        aria-controls="«r23»"
        aria-describedby="«r23»"
        class="emotion-20 emotion-21"
        tabindex="-1"
      >
        <span
          class="emotion-22 emotion-23"
          data-testid="taglist-open"
        >
          +51
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and add ellipsis to the first tag as it too long 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 0px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway is the best cloud provider ever invented
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly and ignore custom threshold as it does not fit the parent 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

.emotion-8 {
  display: inherit;
}

.emotion-8[data-container-full-height="true"] {
  height: 100%;
}

.emotion-8[data-container-full-width="true"] {
  width: 100%;
}

.emotion-10 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </span>
      </div>
      <div
        aria-controls="«ri»"
        aria-describedby="«ri»"
        class="emotion-8 emotion-9"
        tabindex="-1"
      >
        <span
          class="emotion-10 emotion-11"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with copiable 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8 {
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="«r11»"
          aria-describedby="«r11»"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              scaleway
            </div>
          </button>
        </div>
        <div
          aria-controls="«r13»"
          aria-describedby="«r13»"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="ellipsed emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              cloud
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            cloud
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

.emotion-12 {
  display: inherit;
}

.emotion-12[data-container-full-height="true"] {
  height: 100%;
}

.emotion-12[data-container-full-width="true"] {
  width: 100%;
}

.emotion-14 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            cloud
          </div>
        </span>
      </div>
      <div
        aria-controls="«re»"
        aria-describedby="«re»"
        class="emotion-12 emotion-13"
        tabindex="-1"
      >
        <span
          class="emotion-14 emotion-15"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with custom threshold and extra tags and maxLength inferior to the combined size of tags 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 100px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

.emotion-8 {
  display: inherit;
}

.emotion-8[data-container-full-height="true"] {
  height: 100%;
}

.emotion-8[data-container-full-width="true"] {
  width: 100%;
}

.emotion-10 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </span>
      </div>
      <div
        aria-controls="«rn»"
        aria-describedby="«rn»"
        class="emotion-8 emotion-9"
        tabindex="-1"
      >
        <span
          class="emotion-10 emotion-11"
          data-testid="taglist-open"
        >
          +2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with icons 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-4 {
  display: inherit;
}

.emotion-4[data-container-full-height="true"] {
  height: 100%;
}

.emotion-4[data-container-full-width="true"] {
  width: 100%;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6:hover,
.emotion-6:active {
  cursor: pointer;
  background: #e9eaeb;
  border-color: #92959d;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-8 {
  max-width: 14.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          aria-controls="«r1b»"
          aria-describedby="«r1b»"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              scaleway
            </div>
          </button>
        </div>
        <div
          aria-controls="«r1d»"
          aria-describedby="«r1d»"
          class="emotion-4 emotion-5"
          tabindex="0"
        >
          <button
            class="ellipsed emotion-6 emotion-7"
          >
            <div
              class="emotion-8 emotion-9 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
            >
              cloud
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with multiline 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

.emotion-12 {
  display: inherit;
}

.emotion-12[data-container-full-height="true"] {
  height: 100%;
}

.emotion-12[data-container-full-width="true"] {
  width: 100%;
}

.emotion-14 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </span>
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            cloud
          </div>
        </span>
      </div>
      <div
        aria-controls="«rs»"
        aria-describedby="«rs»"
        class="emotion-12 emotion-13"
        tabindex="-1"
      >
        <span
          class="emotion-14 emotion-15"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`tagList > renders correctly with no tags 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  />
</DocumentFragment>
`;

exports[`tagList > renders correctly with placement 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  gap: 0.5rem;
}

.emotion-2:has(.ellipsed) {
  width: calc(100% - 50px);
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-2 span,
.emotion-2 div {
  width: 100%;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 0.25rem;
  padding: 0 0.5rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  color: #3f4250;
  background: #ffffff;
  border: solid 1px #d9dadd;
}

.emotion-6 {
  max-width: 14.5rem;
}

.emotion-8 {
  display: inherit;
}

.emotion-8[data-container-full-height="true"] {
  height: 100%;
}

.emotion-8[data-container-full-width="true"] {
  width: 100%;
}

.emotion-10 {
  cursor: pointer;
  color: #641cb3;
  border: none;
  font-size: 0.875rem;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 21.875rem;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
  background-color: transparent;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      style="visibility: visible;"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <span
          class="ellipsed emotion-4 emotion-5"
        >
          <div
            class="emotion-6 emotion-7 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_true__m4c9ow7 style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
          >
            scaleway
          </div>
        </span>
      </div>
      <div
        aria-controls="«r5»"
        aria-describedby="«r5»"
        class="emotion-8 emotion-9"
        tabindex="-1"
      >
        <span
          class="emotion-10 emotion-11"
          data-testid="taglist-open"
        >
          +1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
